--- a/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_2.yaml
@@ -5,91 +5,91 @@
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Other Topics"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Other Topics"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Robustness, Domain Shift, and Generalization"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Robustness, Domain Shift, and Generalization"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Representation Learning Backbones for RS"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Zero-/Few-Shot and Prompt Sensitivity"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Zero-/Few-Shot and Prompt Sensitivity"
 - "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Zero-/Few-Shot and Prompt Sensitivity"
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Contrastive Vision-Language Encoders"
+  - "Contrastive Alignment Objectives"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
@@ -98,15 +98,15 @@
   - "Prior Methods"
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
-  - "Pretraining Backbones and Modal Encoders"
+  - "Vision Encoder Choices and Scales"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 3
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 3
@@ -115,19 +115,19 @@
   - "Model/Architecture Adoption"
   - "Result Comparison"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
-  - "Pretraining Backbones and Modal Encoders"
+  - "Vision Encoder Choices and Scales"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 5
   "intent_labels":
   - "Benchmark Utilization"
   "topic_labels":
-  - "Task-Specific Metrics and Protocols"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[18]"
   "block_ids":
   - 5
   "intent_labels":
   - "Benchmark Utilization"
   "topic_labels":
-  - "Task-Specific Metrics and Protocols"
+  - "Image-Level Understanding"
