--- a/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_6.yaml
+++ b/data/raw/gis/vlm4rs/result/cot_output_gpt-5-2025-08-07/paper_6.yaml
@@ -5,109 +5,109 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[5–7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Object/Region-Level Grounding and Referring"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Explanations and Consistency Checks"
+  - "Bias Analysis and Error Taxonomies"
 - "unique_context_marker": "[10]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Prompt-Based Modulation"
 - "unique_context_marker": "[11, 12]"
   "block_ids":
   - 1
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Explanations and Consistency Checks"
+  - "Bias Analysis and Error Taxonomies"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prospective Application"
   "topic_labels":
-  - "Region-Level Interaction Tasks"
+  - "Other Topics"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 1
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Logical Consistency Reinforcement"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 1
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Logical Consistency Reinforcement"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Research Gap"
   "topic_labels":
-  - "Region-Level Interaction Tasks"
+  - "Hallucination Mitigation and Honesty"
 - "unique_context_marker": "[18]"
   "block_ids":
   - 3
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Visual Grounding Corpora and Geometry Labels"
 - "unique_context_marker": "[19]"
   "block_ids":
   - 3
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Visual Grounding Corpora and Geometry Labels"
 - "unique_context_marker": "[20]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Other Topics"
 - "unique_context_marker": "[21]"
   "block_ids":
   - 4
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Memory/Compute Optimization Techniques"
 - "unique_context_marker": "[22]"
   "block_ids":
   - 6
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - "Language Models and Tokenization"
