--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_2.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_2.yaml
@@ -82,22 +82,22 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
+  - - "Attention-Based Co-Encoding"
+    - "Attention-Based Co-Encoding"
+    - "Attention-Based Co-Encoding"
+    - "Cross-Modal Alignment and Fusion"
+    - "Cross-Modal Alignment and Fusion"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 1
   "intent_labels":
   - []
   "topic_labels":
-  - - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
-    - "Contrastive Vision-Language Encoders"
-    - "Pretraining Backbones and Modal Encoders"
+  - - "Attention-Based Co-Encoding"
+    - "Attention-Based Co-Encoding"
+    - "Attention-Based Co-Encoding"
+    - "Cross-Modal Alignment and Fusion"
+    - "Cross-Modal Alignment and Fusion"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
@@ -106,11 +106,7 @@
   - []
   - []
   "topic_labels":
-  - - "Task-Specific Metrics and Protocols"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
+  - []
   - []
 - "unique_context_marker": "[15]"
   "block_ids":
