--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_4.yaml
@@ -5,18 +5,14 @@
   - 2
   "intent_labels":
   - []
-  - - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-  "topic_labels":
-  - - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
   - []
+  "topic_labels":
+  - []
+  - - "Attention-Based Co-Encoding"
+    - "Cross-Modal Alignment and Fusion"
+    - "Attention-Based Co-Encoding"
+    - "Cross-Modal Alignment and Fusion"
+    - "Cross-Modal Alignment and Fusion"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
@@ -30,11 +26,7 @@
   - 2
   "intent_labels":
   - []
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
   - []
@@ -73,23 +65,19 @@
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
+    - "Domain Overview"
   "topic_labels":
-  - - "Image-Level Understanding Tasks"
-    - "Remote Sensing with Vision-Language Models"
-    - "Cross-Modal Fusion, Alignment, and Outputs"
-    - "Image-Level Understanding Tasks"
-    - "Remote Sensing with Vision-Language Models"
+  - []
 - "unique_context_marker": "[9]"
   "block_ids":
   - 2
   - 3
   "intent_labels":
-  - - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
+  - []
   - []
   "topic_labels":
   - []
@@ -98,63 +86,39 @@
   "block_ids":
   - 2
   "intent_labels":
-  - - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[11]"
   "block_ids":
   - 2
   "intent_labels":
-  - - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[12]"
   "block_ids":
   - 2
   "intent_labels":
-  - - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
+  - []
   "topic_labels":
-  - - "Attention-Based Fusion Blocks"
-    - "Attention-Based Fusion Blocks"
-    - "Attention-Based Fusion Blocks"
-    - "Attention-Based Fusion Blocks"
-    - "Attention-Based Fusion Blocks"
+  - []
 - "unique_context_marker": "[13]"
   "block_ids":
   - 2
   "intent_labels":
-  - - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
-    - "Algorithm/Principle Adoption"
+  - []
   "topic_labels":
-  - - "Attention-Based Fusion Blocks"
-    - "Attention-Based Fusion Blocks"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Attention-Based Fusion Blocks"
-    - "Attention-Based Fusion Blocks"
+  - - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 2
   "intent_labels":
-  - - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[15]"
