--- a/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_8.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_8.yaml
@@ -3,99 +3,99 @@
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Other Topics"
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Other Topics"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prospective Application"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Other Topics"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Other Topics"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Prior Methods"
-  "topic_labels":
   - null
+  "topic_labels":
+  - "Other Topics"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   - 3
   - 4
   "intent_labels":
-  - "Prior Methods"
+  - null
   - "Domain Overview"
-  - "Prior Methods"
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
-  - "Dataset Construction and Annotation"
-  - "Connector and Prompt Mechanisms"
+  - "Other Topics"
+  - "Image-Level Understanding"
+  - "Vision-Language Connectors to LLMs"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - "Prior Methods"
-  - "Prior Methods"
+  - null
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
+  - "Other Topics"
   - null
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - "Prior Methods"
-  - "Prior Methods"
+  - null
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Other Topics"
+  - "Hallucination Mitigation and Honesty"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - "Prior Methods"
-  - "Prior Methods"
+  - null
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
+  - "Other Topics"
   - null
 - "unique_context_marker": "[10]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - "Prior Methods"
-  - "Prior Methods"
+  - null
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
+  - "Other Topics"
   - null
 - "unique_context_marker": "[11]"
   "block_ids":
   - 1
   - 4
   "intent_labels":
-  - "Prior Methods"
-  - "Prior Methods"
+  - null
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
+  - "Other Topics"
   - null
 - "unique_context_marker": "[12]"
   "block_ids":
@@ -103,119 +103,119 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[18]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[19]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[20]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Contrastive Alignment Objectives"
 - "unique_context_marker": "[21]"
   "block_ids":
   - 3
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[22]"
   "block_ids":
   - 4
   "intent_labels":
-  - "Domain Overview"
+  - null
   "topic_labels":
-  - "Task Scoping and Formulations"
+  - "Other Topics"
 - "unique_context_marker": "[23]"
   "block_ids":
   - 4
   "intent_labels":
-  - "Prior Methods"
+  - null
   "topic_labels":
-  - "Contrastive Vision-Language Encoders"
+  - "Contrastive Alignment Objectives"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 4
   "intent_labels":
-  - "Prior Methods"
+  - null
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[25]"
   "block_ids":
   - 4
   "intent_labels":
-  - "Prior Methods"
+  - null
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
+  - "Other Topics"
 - "unique_context_marker": "[26]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[27]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[28]"
   "block_ids":
   - 6
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Other Topics"
 - "unique_context_marker": "[29]"
   "block_ids":
   - 13
@@ -236,18 +236,18 @@
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - null
 - "unique_context_marker": "[32]"
   "block_ids":
   - 13
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - null
 - "unique_context_marker": "[33]"
   "block_ids":
   - 13
   "intent_labels":
   - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Prompt and Adapter Tuning"
+  - "Parameter-Efficient Adaptation"
