--- a/data/raw/gis/vlm4rs/human_todo/paper_6.yaml
+++ b/data/raw/gis/vlm4rs/human_todo/paper_6.yaml
@@ -38,37 +38,37 @@ blocks:
   citations:
   - marker: '[1–4]'
     intent_label: Domain Overview
-    topic_label: Image-Level Understanding Tasks
+    topic_label: Instruction Tuning and SFT
   - marker: '[5–7]'
     intent_label: Prior Methods
-    topic_label: Image-Level Understanding Tasks
+    topic_label: Object/Region-Level Grounding and Referring
   - marker: '[8]'
     intent_label: Prior Methods
-    topic_label: Image-Level Understanding Tasks
+    topic_label: Image-Level Understanding
   - marker: '[9]'
     intent_label: Research Gap
-    topic_label: Explanations and Consistency Checks
+    topic_label: Bias Analysis and Error Taxonomies
   - marker: '[10]'
-    intent_label: Research Gap
-    topic_label: Prompt and Adapter Tuning
+    intent_label: Prior Methods
+    topic_label: Prompt-Based Modulation
   - marker: '[11, 12]'
     intent_label: Research Gap
-    topic_label: Explanations and Consistency Checks
+    topic_label: Bias Analysis and Error Taxonomies
   - marker: '[13]'
     intent_label: Prospective Application
-    topic_label: Region-Level Interaction Tasks
+    topic_label: Other Topics
   - marker: '[14]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Instruction Tuning and Reinforcement Alignment
+    topic_label: Instruction Tuning and SFT
   - marker: '[15]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Instruction Tuning and Reinforcement Alignment
+    topic_label: Logical Consistency Reinforcement
   - marker: '[16]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Instruction Tuning and Reinforcement Alignment
+    topic_label: Logical Consistency Reinforcement
   - marker: '[17]'
     intent_label: Domain Overview
-    topic_label: Image-Level Understanding Tasks
+    topic_label: Reliability, Reasoning, and Trustworthiness
 - block_id: 2
   content: The overall architecture of GeoReason is illustrated in Fig. 2. It bridges the gap between raw perception and cognitive
     reasoning through a logic-driven curation pipeline and a consistency-reinforced training strategy.
@@ -104,13 +104,13 @@ blocks:
   citations:
   - marker: '[18]'
     intent_label: Resource Utilization
-    topic_label: Dataset Construction and Annotation
+    topic_label: Visual Grounding Corpora and Geometry Labels
   - marker: '[19]'
     intent_label: Resource Utilization
-    topic_label: Dataset Construction and Annotation
+    topic_label: Visual Grounding Corpora and Geometry Labels
   - marker: '[20]'
     intent_label: Domain Overview
-    topic_label: Dataset Construction and Annotation
+    topic_label: Other Topics
 - block_id: 4
   content: 'To internalize the deductive capabilities of GeoReason-Bench, we develop a two-stage training pipeline (Fig. 2
     middle). Stage 1 employs Supervised Knowledge Initialization to equip the model with foundational reasoning syntax and
@@ -175,7 +175,7 @@ blocks:
   citations:
   - marker: '[21]'
     intent_label: Algorithm/Principle Adoption
-    topic_label: Instruction Tuning and Reinforcement Alignment
+    topic_label: Memory/Compute Optimization Techniques
 - block_id: 5
   content: ''
   citations: []
@@ -199,7 +199,7 @@ blocks:
   citations:
   - marker: '[22]'
     intent_label: Model/Architecture Adoption
-    topic_label: Pretraining Backbones and Modal Encoders
+    topic_label: Language Models and Tokenization
 - block_id: 7
   content: Table I summarizes the quantitative performance on the GeoReason-Bench test set. We evaluate models across Perceptual
     Tasks (Count, Color, Shape, Scene) and Reasoning Tasks (Reason) to analyze their multi-level understanding. As shown in
