--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_5.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_5.yaml
@@ -5,22 +5,26 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
 - "unique_context_marker": "[19]"
   "block_ids":
   - 1
   "intent_labels":
-  - []
+  - - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
+    - "Prior Methods"
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 1
@@ -31,21 +35,13 @@
   - []
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Region-Level Interaction Tasks"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Task-Specific Metrics and Protocols"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
+  - - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+  - []
 - "unique_context_marker": "[38, 40]"
   "block_ids":
   - 1
@@ -58,12 +54,16 @@
   - 1
   "intent_labels":
   - - "Prior Methods"
+    - "Algorithm/Principle Adoption"
     - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+    - "Algorithm/Principle Adoption"
     - "Prior Methods"
   "topic_labels":
-  - []
+  - - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
@@ -74,11 +74,7 @@
   - 11
   - 12
   "intent_labels":
-  - - "Model/Architecture Adoption"
-    - "Resource Utilization"
-    - "Resource Utilization"
-    - "Model/Architecture Adoption"
-    - "Model/Architecture Adoption"
+  - []
   - []
   - []
   - []
@@ -87,24 +83,20 @@
   - []
   "topic_labels":
   - []
-  - - "Pretraining Backbones and Modal Encoders"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Connector and Prompt Mechanisms"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Textualization of Spatial Outputs"
   - []
   - []
+  - - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
   - []
-  - - "Explanations and Consistency Checks"
-    - "Task-Specific Metrics and Protocols"
-    - "Task-Specific Metrics and Protocols"
-    - "Explanations and Consistency Checks"
-    - "Explanations and Consistency Checks"
+  - []
+  - - "Language Models and Tokenization"
+    - "Captioning and QA Scoring"
+    - "Language Models and Tokenization"
+    - "Language Models and Tokenization"
+    - "Captioning and QA Scoring"
 - "unique_context_marker": "[20]"
   "block_ids":
   - 1
@@ -116,7 +108,11 @@
   - []
   "topic_labels":
   - []
-  - []
+  - - "Rule-Based and OSM-Derived QA Pairs"
+    - "Image-Level Understanding"
+    - "Instruction-Following Conversational Sets"
+    - "Rule-Based and OSM-Derived QA Pairs"
+    - "Dataset Construction and Supervision Sources"
   - []
 - "unique_context_marker": "[5]"
   "block_ids":
@@ -140,11 +136,7 @@
   "topic_labels":
   - []
   - []
-  - - "Task-Specific Metrics and Protocols"
-    - "Task-Specific Metrics and Protocols"
-    - "Task-Specific Metrics and Protocols"
-    - "Task-Specific Metrics and Protocols"
-    - "Task-Specific Metrics and Protocols"
+  - []
 - "unique_context_marker": "[14]"
   "block_ids":
   - 1
@@ -166,7 +158,11 @@
   "topic_labels":
   - []
   - []
-  - []
+  - - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
+    - "Parameter-Efficient Adaptation"
   - []
 - "unique_context_marker": "[9]"
   "block_ids":
@@ -196,7 +192,11 @@
   "topic_labels":
   - []
   - []
-  - []
+  - - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
   - []
 - "unique_context_marker": "[18]"
   "block_ids":
@@ -204,55 +204,35 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
+  - []
 - "unique_context_marker": "[8]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
 - "unique_context_marker": "[13]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
 - "unique_context_marker": "[41]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
+  - []
 - "unique_context_marker": "[22]"
   "block_ids":
   - 2
   "intent_labels":
   - []
   "topic_labels":
-  - - "Multispectral and Temporal Modeling"
-    - "Spectral/Temporal Encoding and Masking"
-    - "Prompt and Adapter Tuning"
-    - "Spectral/Temporal Encoding and Masking"
-    - "Multispectral and Temporal Modeling"
+  - []
 - "unique_context_marker": "[14, 29]"
   "block_ids":
   - 2
@@ -264,33 +244,21 @@
   "block_ids":
   - 2
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Research Gap"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[16]"
   "block_ids":
   - 2
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Research Gap"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[3, 38]"
   "block_ids":
   - 2
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Research Gap"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[28]"
@@ -302,32 +270,44 @@
   - []
   "topic_labels":
   - []
-  - []
+  - - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
+    - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[10]"
   "block_ids":
   - 7
   "intent_labels":
   - []
   "topic_labels":
-  - - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
+  - - "Vision-Language Connectors to LLMs"
+    - "Other Topics"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
 - "unique_context_marker": "[26]"
   "block_ids":
   - 8
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Dataset Construction and Supervision Sources"
+    - "Contrastive Alignment Objectives"
+    - "Dataset Construction and Supervision Sources"
+    - "Dataset Construction and Supervision Sources"
+    - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 8
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Dataset Construction and Supervision Sources"
+    - "Other Topics"
+    - "Dataset Construction and Supervision Sources"
+    - "Dataset Construction and Supervision Sources"
+    - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[34]"
   "block_ids":
   - 9
@@ -355,19 +335,27 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Rule-Based and OSM-Derived QA Pairs"
+    - "Image-Level Understanding"
+    - "Instruction-Following Conversational Sets"
+    - "Rule-Based and OSM-Derived QA Pairs"
+    - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[31]"
   "block_ids":
   - 9
   "intent_labels":
-  - []
+  - - "Resource Utilization"
+    - "Resource Utilization"
+    - "Model/Architecture Adoption"
+    - "Model/Architecture Adoption"
+    - "Resource Utilization"
   "topic_labels":
   - []
 - "unique_context_marker": "[32]"
   "block_ids":
   - 9
   "intent_labels":
-  - - "Resource Utilization"
+  - - "Other Intent"
     - "Resource Utilization"
     - "Resource Utilization"
     - "Resource Utilization"
@@ -387,22 +375,22 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Dataset Construction and Annotation"
-    - "Dataset Construction and Annotation"
-    - "Dataset Construction and Annotation"
-    - "Region-Level Interaction Tasks"
-    - "Region-Level Interaction Tasks"
+  - - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
 - "unique_context_marker": "[37]"
   "block_ids":
   - 9
   "intent_labels":
   - []
   "topic_labels":
-  - - "Dataset Construction and Annotation"
-    - "Dataset Construction and Annotation"
-    - "Dataset Construction and Annotation"
-    - "Region-Level Interaction Tasks"
-    - "Region-Level Interaction Tasks"
+  - - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
 - "unique_context_marker": "[24]"
   "block_ids":
   - 11
@@ -416,25 +404,29 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Adaptation and Tuning Regimes"
-    - "Training Signals and Objectives"
-    - "Adaptation and Tuning Regimes"
-    - "Adaptation and Tuning Regimes"
-    - "Adaptation and Tuning Regimes"
+  - []
 - "unique_context_marker": "[33]"
   "block_ids":
   - 12
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Image-Level Understanding"
+    - "Train/Val/Test Splits and Domain-Shift Protocols"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
 - "unique_context_marker": "[35]"
   "block_ids":
   - 12
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Image-Level Understanding"
+    - "Zero-/Few-Shot and Prompt Sensitivity"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 12
@@ -443,9 +435,13 @@
   - []
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-  - []
+  - - "Instruction Tuning and SFT"
+    - "Answer Space Design and Class Taxonomy"
+    - "Instruction Tuning and SFT"
+    - "Instruction Tuning and SFT"
+    - "Zero-/Few-Shot and Prompt Sensitivity"
+  - - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
