--- a/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_cot_k_gpt-5-2025-08-07/paper_9.yaml
@@ -6,18 +6,14 @@
   - 5
   "intent_labels":
   - []
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
+    - "Instruction Tuning and SFT"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
   - []
   - []
 - "unique_context_marker": "[Chen et al., 2023a]"
@@ -30,25 +26,25 @@
   - 11
   "intent_labels":
   - []
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   - []
   - []
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
+    - "Instruction Tuning and SFT"
+    - "Vision-Language Connectors to LLMs"
+    - "Vision-Language Connectors to LLMs"
   - []
   - []
   - []
-  - []
+  - - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
+    - "Visual Grounding Corpora and Geometry Labels"
   - []
 - "unique_context_marker": "[Zhan et al., 2023b]"
   "block_ids":
@@ -56,7 +52,11 @@
   "intent_labels":
   - []
   "topic_labels":
-  - []
+  - - "Evaluation Protocols and Diagnostics"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
 - "unique_context_marker": "[Liu et al., 2023]"
   "block_ids":
   - 1
@@ -64,11 +64,7 @@
   - 5
   "intent_labels":
   - []
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
   - []
@@ -83,11 +79,11 @@
   - []
   "topic_labels":
   - []
-  - - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
+  - - "Task Formulations in RS VLM"
+    - "Task Formulations in RS VLM"
+    - "Task Formulations in RS VLM"
+    - "Task Formulations in RS VLM"
+    - "Task Formulations in RS VLM"
 - "unique_context_marker": "[Hoxha et al., 2023]"
   "block_ids":
   - 1
@@ -103,12 +99,16 @@
   - []
   - []
   "topic_labels":
-  - []
-  - - "Image-Level Understanding Tasks"
-    - "Image-Level Understanding Tasks"
-    - "Image-Level Understanding Tasks"
-    - "Image-Level Understanding Tasks"
-    - "Image-Level Understanding Tasks"
+  - - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+  - - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
 - "unique_context_marker": "[Zhan et al., 2023a]"
   "block_ids":
   - 1
@@ -118,11 +118,11 @@
   - []
   "topic_labels":
   - []
-  - - "Region-Level Interaction Tasks"
-    - "Region-Level Interaction Tasks"
-    - "Region-Level Interaction Tasks"
-    - "Region-Level Interaction Tasks"
-    - "Region-Level Interaction Tasks"
+  - - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
+    - "Object/Region-Level Grounding and Referring"
 - "unique_context_marker": "[Bashmal et al., 2023]"
   "block_ids":
   - 1
@@ -132,109 +132,65 @@
   - []
   "topic_labels":
   - []
-  - - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Multispectral and Temporal Modeling"
-    - "Multispectral and Temporal Modeling"
-    - "Multispectral and Temporal Modeling"
+  - - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
+    - "Temporal and Multimodal Variants"
 - "unique_context_marker": "[Xiong et al., 2022]"
   "block_ids":
   - 3
   "intent_labels":
   - []
   "topic_labels":
-  - - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
-    - "Task Scoping and Formulations"
+  - - "Task Formulations in RS VLM"
+    - "Other Topics"
+    - "Task Formulations in RS VLM"
+    - "Task Formulations in RS VLM"
+    - "Task Formulations in RS VLM"
 - "unique_context_marker": "[OpenAI, 2022]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
 - "unique_context_marker": "[Touvron et al., 2023a]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
 - "unique_context_marker": "[OpenAI, 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
 - "unique_context_marker": "[Chiang et al., 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Domain Overview"
-    - "Prior Methods"
+  - []
   "topic_labels":
-  - - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Pretraining Backbones and Modal Encoders"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Instruction Tuning and Reinforcement Alignment"
+  - []
 - "unique_context_marker": "[Li et al., 2023]"
   "block_ids":
   - 4
   - 7
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
   - []
-  - - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
-    - "Connector and Prompt Mechanisms"
+  - []
 - "unique_context_marker": "[Zhu et al., 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   "topic_labels":
   - []
 - "unique_context_marker": "[Wang et al., 2023]"
@@ -242,11 +198,7 @@
   - 4
   - 5
   "intent_labels":
-  - - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
-    - "Prior Methods"
+  - []
   - []
   "topic_labels":
   - []
@@ -255,13 +207,13 @@
   "block_ids":
   - 4
   "intent_labels":
-  - - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-    - "Research Gap"
-  "topic_labels":
   - []
+  "topic_labels":
+  - - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
+    - "Image-Level Understanding"
 - "unique_context_marker": "[Dai et al., 2023]"
   "block_ids":
   - 5
@@ -282,22 +234,14 @@
   "intent_labels":
   - []
   "topic_labels":
-  - - "Instruction Tuning and Reinforcement Alignment"
-    - "Cross-Modal Fusion, Alignment, and Outputs"
-    - "Cross-Modal Fusion, Alignment, and Outputs"
-    - "Instruction Tuning and Reinforcement Alignment"
-    - "Cross-Modal Fusion, Alignment, and Outputs"
+  - []
 - "unique_context_marker": "[Mou et al., 2020]"
   "block_ids":
   - 8
   "intent_labels":
   - []
   "topic_labels":
-  - - "Dataset Construction and Annotation"
-    - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
-    - "Rule-Driven QA and Grounding Labels"
+  - []
 - "unique_context_marker": "[Li et al., 2020]"
   "block_ids":
   - 8
