--- a/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_4.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_4.yaml
@@ -5,27 +5,27 @@
   - 2
   "intent_labels":
   - "Prior Methods"
-  - null
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
-  - "Connector and Prompt Mechanisms"
+  - "Rule-Based and OSM-Derived QA Pairs"
+  - null
 - "unique_context_marker": "[2]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Cross-Modal Fusion, Alignment, and Outputs"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[3]"
   "block_ids":
   - 1
   - 2
   "intent_labels":
   - "Prior Methods"
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
-  - "Pretraining Backbones and Modal Encoders"
+  - "Language Models and Tokenization"
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[4]"
   "block_ids":
   - 1
@@ -34,99 +34,99 @@
   - "Prior Methods"
   - "Result Comparison"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
-  - "Spectral/Temporal Encoding and Masking"
+  - "Attention-Based Co-Encoding"
+  - "Cross-Modal Alignment and Fusion"
 - "unique_context_marker": "[5]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[6]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[7]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[8]"
   "block_ids":
   - 1
   "intent_labels":
-  - "Domain Overview"
+  - "Prior Methods"
   "topic_labels":
-  - null
+  - "Other Topics"
 - "unique_context_marker": "[9]"
   "block_ids":
   - 2
   - 3
   "intent_labels":
-  - null
+  - "Model/Architecture Adoption"
   - "Result Comparison"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
-  - "Pretraining Backbones and Modal Encoders"
+  - "Vision Encoder Choices and Scales"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[10]"
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[11]"
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[12]"
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - null
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[13]"
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Algorithm/Principle Adoption"
   "topic_labels":
-  - null
+  - "Attention-Based Co-Encoding"
 - "unique_context_marker": "[14]"
   "block_ids":
   - 2
   "intent_labels":
-  - null
+  - "Model/Architecture Adoption"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - "Knowledge Distillation and Freezing Policies"
 - "unique_context_marker": "[15]"
   "block_ids":
   - 3
   "intent_labels":
-  - "Setting/Protocal Adoption"
+  - "Benchmark Utilization"
   "topic_labels":
-  - "Task-Specific Metrics and Protocols"
+  - "Train/Val/Test Splits and Domain-Shift Protocols"
 - "unique_context_marker": "[16]"
   "block_ids":
   - 3
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Dataset Construction and Supervision Sources"
 - "unique_context_marker": "[17]"
   "block_ids":
   - 3
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Pretraining Backbones and Modal Encoders"
+  - "Language Models and Tokenization"
