--- a/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_9.yaml
+++ b/data/raw/gis/vlm4rs/result/taxo_reverse_gpt-5-2025-08-07/paper_9.yaml
@@ -6,12 +6,12 @@
   - 5
   "intent_labels":
   - "Prior Methods"
-  - null
+  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
   - null
-  - "Textualization of Spatial Outputs"
-  - "Region-Level Interaction Tasks"
+  - "Textualization of Geometry and Masks"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[Chen et al., 2023a]"
   "block_ids":
   - 1
@@ -22,25 +22,25 @@
   - 11
   "intent_labels":
   - "Prior Methods"
-  - null
+  - "Prior Methods"
   - "Prior Methods"
   - "Algorithm/Principle Adoption"
   - "Algorithm/Principle Adoption"
   - "Resource Utilization"
   "topic_labels":
   - null
-  - "Textualization of Spatial Outputs"
-  - "Region-Level Interaction Tasks"
-  - "Connector and Prompt Mechanisms"
-  - "Rule-Driven QA and Grounding Labels"
-  - "Pretraining Backbones and Modal Encoders"
+  - "Textualization of Geometry and Masks"
+  - "Instruction Tuning and SFT"
+  - "Multiresolution and Patch Strategies"
+  - null
+  - "Vision-Language Connectors to LLMs"
 - "unique_context_marker": "[Zhan et al., 2023b]"
   "block_ids":
   - 1
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Task Scoping and Formulations"
+  - null
 - "unique_context_marker": "[Liu et al., 2023]"
   "block_ids":
   - 1
@@ -48,12 +48,12 @@
   - 5
   "intent_labels":
   - "Prior Methods"
-  - null
+  - "Prior Methods"
   - "Research Gap"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
-  - "Connector and Prompt Mechanisms"
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Instruction Tuning and SFT"
+  - "Vision-Language Connectors to LLMs"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[Yuan et al., 2023a]"
   "block_ids":
   - 1
@@ -62,7 +62,7 @@
   - "Domain Overview"
   - "Domain Overview"
   "topic_labels":
-  - "Task Scoping and Formulations"
+  - "Task Formulations in RS VLM"
   - null
 - "unique_context_marker": "[Hoxha et al., 2023]"
   "block_ids":
@@ -70,7 +70,7 @@
   "intent_labels":
   - "Domain Overview"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Image-Level Understanding"
 - "unique_context_marker": "[Yuan et al., 2023b]"
   "block_ids":
   - 1
@@ -79,7 +79,7 @@
   - "Domain Overview"
   - "Domain Overview"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - "Task Formulations in RS VLM"
   - "Other Topic"
 - "unique_context_marker": "[Zhan et al., 2023a]"
   "block_ids":
@@ -89,7 +89,7 @@
   - "Domain Overview"
   - "Domain Overview"
   "topic_labels":
-  - "Region-Level Interaction Tasks"
+  - "Object/Region-Level Grounding and Referring"
   - "Other Topic"
 - "unique_context_marker": "[Bashmal et al., 2023]"
   "block_ids":
@@ -99,116 +99,116 @@
   - "Research Gap"
   - "Domain Overview"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
-  - null
+  - "Temporal and Multimodal Variants"
+  - "Other Topic"
 - "unique_context_marker": "[Xiong et al., 2022]"
   "block_ids":
   - 3
   "intent_labels":
   - "Prior Methods"
   "topic_labels":
-  - "Other Topic"
+  - null
 - "unique_context_marker": "[OpenAI, 2022]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - null
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[Touvron et al., 2023a]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - null
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[OpenAI, 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - null
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[Chiang et al., 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - null
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[Li et al., 2023]"
   "block_ids":
   - 4
   - 7
   "intent_labels":
-  - null
+  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - "Attention-Based Fusion Blocks"
-  - "Connector and Prompt Mechanisms"
+  - "Vision-Language Connectors to LLMs"
+  - "Vision-Language Connectors to LLMs"
 - "unique_context_marker": "[Zhu et al., 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Prior Methods"
   "topic_labels":
-  - "Connector and Prompt Mechanisms"
+  - "Vision-Language Connectors to LLMs"
 - "unique_context_marker": "[Wang et al., 2023]"
   "block_ids":
   - 4
   - 5
   "intent_labels":
-  - null
+  - "Prior Methods"
   - "Prior Methods"
   "topic_labels":
-  - "Textualization of Spatial Outputs"
-  - "Region-Level Interaction Tasks"
+  - "Textualization of Geometry and Masks"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[Hu et al., 2023]"
   "block_ids":
   - 4
   "intent_labels":
-  - null
+  - "Research Gap"
   "topic_labels":
-  - "Image-Level Understanding Tasks"
+  - null
 - "unique_context_marker": "[Dai et al., 2023]"
   "block_ids":
   - 5
   "intent_labels":
   - "Research Gap"
   "topic_labels":
-  - "Instruction Tuning and Reinforcement Alignment"
+  - "Instruction Tuning and SFT"
 - "unique_context_marker": "[Fang et al., 2023]"
   "block_ids":
   - 7
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - "Contrastive Vision-Language Encoders"
+  - "Vision Encoder Choices and Scales"
 - "unique_context_marker": "[Touvron et al., 2023b]"
   "block_ids":
   - 7
   "intent_labels":
   - "Model/Architecture Adoption"
   "topic_labels":
-  - null
+  - "Language Models and Tokenization"
 - "unique_context_marker": "[Mou et al., 2020]"
   "block_ids":
   - 8
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Temporal and Multimodal Variants"
 - "unique_context_marker": "[Li et al., 2020]"
   "block_ids":
   - 8
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Visual Grounding Corpora and Geometry Labels"
 - "unique_context_marker": "[Xia et al., 2018]"
   "block_ids":
   - 8
   "intent_labels":
   - "Resource Utilization"
   "topic_labels":
-  - "Dataset Construction and Annotation"
+  - "Visual Grounding Corpora and Geometry Labels"
